skeplib/tests/fixtures/sema_project/valid/file_module_import_call/main.sk
import lib;
fn main() -> Int { return lib.add(1, 2); }
