skeplib/tests/fixtures/sema_project/invalid/non_exported_import/a.sk
fn hidden() -> Int { return 1; }
